# django-building-blocks

./: .editorconfig  .gitignore  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.kaos/: config.yml
building_blocks/: __init__.py  abstracts.py  fields.py  forms.py  querysets.py  utils.py  views.py
building_blocks/admin/: __init__.py  admin.py  base.py  blocks.py  fields.py  filters.py  inlines.py  mixins.py  models.py  utils.py
building_blocks/admin2/: base.py  blocks.py  models.py
building_blocks/consts/: field_names.py
building_blocks/contrib/: admin.py  stackedit.py  views.py
building_blocks/factories/: factories.py  utils.py
building_blocks/models/: __init__.py  abstracts.py  base.py  blocks.py  enums.py  factories.py  fields.py  interfaces.py  mixins.py  models.py  querysets.py
building_blocks/rest/: serializers.py  viewsets.py
building_blocks/templatetags/: nav_link.py
docs/: admin.rst  building_blocks.rst  conf.py  consts.rst  contrib.rst  index.rst  mixins.rst  models.rst  rest.rst
docs/admin/: abstracts.rst  blocks.rst
example/: .gitignore
example/complex_factories_sample/: admin.py  models.py
example/example/: settings.py  urls.py
example/factories_sample/: admin.py  models.py
example/sample/: admin.py  models.py
example/simple/: models.py
example/templates/: base.html
tests/: test_abstracts.py  test_fields.py  test_forms.py  test_mixins.py  test_querysets.py
tests/admin/: test_EditReadonlyAdminMixin.py  test_HasUserAdmin.py  test_blocks.py  test_inlines.py  test_mixins.py  (+1 more)
(+77 files in other folders)
