[metadata]
name = django-building-blocks
version = attr: building_blocks.__version__
description = Abstract Django base models to act as building blocks for rapid development of Django database models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaoslabsinc/django-building-blocks
author = Kaos Labs Inc.
author_email = keyvan@keyvanm.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

keywords = django, abstract, models, building blocks, database models

[options]
include_package_data = true
packages = find:
install_requires =
    django>=3.2
    django-model-utils
    rules
    django-object-actions
    django-fsm~=2.8
    djangorestframework
    dj-kaos-utils>=0.1.0-rc2
[options.extras_require]
test =
    tox
    pytest-django
    pytest-pythonpath
    pytest-cov
